Fixed profile pic on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -324,11 +324,6 @@ span.lead {
 		height: auto;
 	}
 
-	img.profile-pic {
-		max-width: 100%;
-		width: 200px;
-	}
-
 	#profile, #contact, #professional-skills {
 		max-width: 600px;
 		width: 100%;
